# lovely-mobile-maker

./: .gitignore  Cargo.toml  README.md  index.html  main.js  pkg
bindgen/: Cargo.toml
bindgen/src/: axml.rs  lib.rs  zip.rs
css/: main.css
js/: icon.js  img.js  main.js  manifest.js  pkg  platform.js  state.js  steps.js  util.js
mbf-axml/src/: lib.rs
mbf-zip/: Cargo.toml  README.md
mbf-zip/src/: data.rs  lib.rs  signing.rs
